--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login Page</title>
+  <title>Loginn Page</title>
   <link rel="stylesheet" href="form.css">
 </head>
 <body>
